package org.example;

public abstract class ProcessStep {
    private boolean result;

    public void execute(MixingTank tank){
        if (this.basicExecute(tank)){
            this.setSuccess();
        }
        else this.setFailure();
    }

    public boolean isDone(){
        return this.result;
    }

    public void setSuccess(){
        this.result = true;
    }

    public void setFailure(){
        this.result = false;
    }

    public abstract boolean basicExecute(MixingTank tank);
    protected void delay(int sec) throws InterruptedException{
        Thread.sleep(sec);
    }
}


